feat: add 'Select Route' page for rule selection.
