# docs/swagger.yaml
@@ -101,6 +101,49 @@ info:
   title: Go Reauth Proxy Admin API
   version: "1.0"
 paths:
+  /api/config/default-route:
+    get:
+      description: Get the configured default route when root route is requested
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+      summary: Get default route
+      tags:
+      - config
+    post:
+      consumes:
+      - application/json
+      description: Set the configured default route when root route is requested
+      parameters:
+      - description: 'Route configuration, example: {\'
+        in: body
+        name: rule
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+      summary: Set default route
+      tags:
+      - config
   /api/flush:
     post:
       description: Remove all proxy rules
